--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -10,7 +10,7 @@ output:
 
 1. Load the data (i.e. read.csv())
 
-```{r echo=TRUE}
+```{r echo=TRUE, results="hide"}
 
 filename <- "repdata%2Fdata%2Factivity.zip"
 
@@ -30,7 +30,7 @@ if("activity.csv" %in% dir()){
 2. Process/transform the data (if necessary) into a format suitable for your
 analysis
 
-```{r echo=TRUE}
+```{r echo=TRUE, results="hide"}
         data$date <- as.Date(data$date , "%Y-%m-%d")
         data <- as.data.frame(data)
         tot.n.steps.perday <-aggregate(steps ~ date, data,  FUN = sum)
@@ -42,14 +42,14 @@ analysis
 
 1. Make a histogram of the total number of steps taken each day
 
-```{r echo=TRUE}
+```{r echo=TRUE, results="hide"}
 hist(tot.n.steps.perday$steps, main = "Histogram of total number of steps taken per day", xlab = "Total number of steps")
 ```
 
 2. Calculate and report the mean and median total number of steps taken
 per day
 
-```{r echo=TRUE}
+```{r echo=TRUE, results="hide"}
 print(paste("The mean of the total number of steps taken per day is ", mean(tot.n.steps.perday$steps),"and has a median of ", median(tot.n.steps.perday$steps)))
 ```
 
@@ -58,7 +58,7 @@ print(paste("The mean of the total number of steps taken per day is ", mean(tot.
 1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis)
 and the average number of steps taken, averaged across all days (y-axis)
 
-```{r echo=TRUE}
+```{r echo=TRUE, results="hide"}
 Mean_steps <- aggregate(steps ~ interval, data, FUN = mean, na.rm = TRUE)
         colnames(Mean_steps) <- c("interval", "mean")
         
@@ -67,7 +67,7 @@ Mean_steps <- aggregate(steps ~ interval, data, FUN = mean, na.rm = TRUE)
 
 2. Which 5-minute interval, on average across all the days in the dataset,
 contains the maximum number of steps?
-```{r echo=TRUE}        
+```{r echo=TRUE, results="hide"}
         maxsteps <- max(Mean_steps$mean)
         Maxinterval <- Mean_steps$interval[Mean_steps$mean == maxsteps]
         print(paste(Maxinterval," is the interval with maximum number of steps of ", maxsteps, " steps"))
@@ -76,7 +76,7 @@ contains the maximum number of steps?
 1. Calculate and report the total number of missing values in the dataset
 (i.e. the total number of rows with NAs)
 
-```{r echo=TRUE} 
+```{r echo=TRUE, results="hide"}
         missingdata <- sum(is.na(data$steps))
         print(paste("There are", missingdata, "missing data points."))
 ```
@@ -89,7 +89,7 @@ The mean used to fill missing value.
 
 3. Create a new dataset that is equal to the original dataset but with the
 missing data filled in.
-```{r echo=TRUE}
+```{r echo=TRUE, results="hide"}
         betterdata <- data
         betterdata$steps[is.na(betterdata$steps)] <- median(data$steps, na.rm=TRUE)
         betterdataday <- aggregate(steps ~ date, data=betterdata, sum, na.rm=TRUE)
@@ -99,7 +99,7 @@ and report the mean and median total number of steps taken per day. Do
 these values differ from the estimates from the first part of the assignment?
 What is the impact of imputing missing data on the estimates of the total
 daily number of steps?
-```{r echo=TRUE}
+```{r echo=TRUE, results="hide"}
         hist(betterdataday$steps, main="Total Steps per Day \n Adjusted Data",xlab="Steps", ylab="Frequency")
         
         print(paste("The mean of the total number of steps taken per day after NA is replaced is ",mean(betterdataday$steps),"and has a median of ", median(betterdataday$steps)))                
@@ -111,7 +111,7 @@ The mean and median has changed, and has made the histogram to skew
 and “weekend” indicating whether a given date is a weekday or weekend
 day.
 
-```{r echo=TRUE} 
+```{r echo=TRUE, results="hide"}
         betterdata$date <- as.Date(betterdata$date)
         betterdata$dayname <- weekdays(betterdata$date)
         betterdata$weekend <- as.factor(ifelse(betterdata$dayname == "Saturday" |
@@ -122,7 +122,7 @@ day.
 across all weekday days or weekend days (y-axis). The plot should look
 something like the following, which was creating using simulated data:
 
-```{r echo=TRUE} 
+```{r echo=TRUE, results="hide"}
         library(lattice)
         plotdata <- aggregate(steps ~ interval + weekend, betterdata, mean)
         xyplot(steps ~ interval | factor(weekend), data=plotdata, aspect=1/3, type="l")
